# geany-plugins

./: configure.ac
bracketcolors/: AUTHORS  README
bracketcolors/src/: BracketMap.cc  BracketMap.h  Configuration.cc  Configuration.h  Makefile.am  Utils.cc  Utils.h  bracketcolors-ignore-styles.h  bracketcolors.cc  generate_ignore_styles.py
bracketcolors/util/: generate_ignore_styles.py
